bad/for_bool_over_bool.example_compiler_output
ERROR
[1mbad/for_bool_over_bool.lat:3:19: [1;31merror: [0;1mfor cannot iterate over value of non-array type `boolean`[m
	for (boolean x : true) {}
	                 [1;32m^[m
